kubernetes/infra/monitoring/otel-collector/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: otel-collector
  labels:
    pod-security.kubernetes.io/enforce: privileged
